Updated: - Added a web client to retrieve data from the public API. - Added a logic service of the HolidayService to generate data from public API. - Added a logic to the HolidayController. - Added new GlobalExceptionHandler to handle unexpected and error respond. - Added unit tests for HolidayController, HolidayService and BotClient. - Added OpenApi for Api documents - Configured fallback cache manager for Redis. - Updated README with setup and workspace instructions.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,4 +6,12 @@ server:
 bot:
   api-key: YOUR_API_KEY_IS_HERE
   host: https://apigw1.bot.or.th
+  client-id: ADD_YOUR_CLIENT_ID
   financial-institutions-holidays-uri: /bot/public/financial-institutions-holidays
+
+spring:
+  cache:
+    type: redis
+  redis:
+    host: localhost
+    port: 6379
